reorder html attribrutes to better align with element purpose and fix tab index highlighting on click, text selection disabled

--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -5,6 +5,10 @@
   font-style: normal;
 }
 
+*{
+  user-select: none;
+}
+
 body {
   font-family: 'MenuFont', sans-serif;
   color: #a3bbd8;
